force-app/main/default/objects/IntegratedDatasetConfig__c/IntegratedDatasetConfig__c.object-meta.xml
<CustomObject>
    <label>Integrated Dataset Config</label>
    <nameField>
        <displayFormat>XDC-{000000}</displayFormat>
        <label>Integrated Dataset Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrated Dataset Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>