force-app/main/default/objects/IntegratedDatasetConfig__c/fields/Alias_Storage__c.field-meta.xml
<CustomField>
    <fullName>Alias_Storage__c</fullName>
    <label>Alias Storage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>