force-app/main/default/objects/IntegratedDatasetConfig__c/fields/AllRunsHighestCriteria__c.field-meta.xml
<CustomField>
    <fullName>AllRunsHighestCriteria__c</fullName>
    <label>All Runs: Highest Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>