force-app/main/default/objects/IntegratedDatasetConfig__c/fields/AllRunsLowestCriteria__c.field-meta.xml
<CustomField>
    <fullName>AllRunsLowestCriteria__c</fullName>
    <label>All Runs: Lowest Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>