force-app/main/default/objects/IntegratedDatasetConfig__c/fields/Analytics_Asset__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytics Asset</label>
    <referenceTo>WaveAnnotationTarget</referenceTo>
    <relationshipName>Integrated_Dataset_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>