force-app/main/default/objects/IntegratedDatasetConfig__c/fields/DailyEndTime__c.field-meta.xml
<CustomField>
    <fullName>DailyEndTime__c</fullName>
    <label>Daily End Time</label>
    <type>Time</type>
</CustomField>