force-app/main/default/objects/IntegratedDatasetConfig__c/fields/DailyStartTime__c.field-meta.xml
<CustomField>
    <fullName>DailyStartTime__c</fullName>
    <label>Daily Start Time</label>
    <type>Time</type>
</CustomField>