force-app/main/default/objects/IntegratedDatasetConfig__c/fields/DatasetName__c.field-meta.xml
<CustomField>
    <fullName>DatasetName__c</fullName>
    <label>Dataset Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>