force-app/main/default/objects/IntegratedDatasetConfig__c/fields/ExternaServiceParameters__c.field-meta.xml
<CustomField>
    <fullName>ExternaServiceParameters__c</fullName>
    <description>Keep it in json okay. Maybe serialize the runner object and put that in here.</description>
    <label>External Service Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>