force-app/main/default/objects/IntegratedDatasetConfig__c/fields/InsightsExternalDataId__c.field-meta.xml
<CustomField>
    <fullName>InsightsExternalDataId__c</fullName>
    <label>InsightsExternalDataId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>