force-app/main/default/objects/IntegratedDatasetConfig__c/fields/LastRunHighestCriteria__c.field-meta.xml
<CustomField>
    <fullName>LastRunHighestCriteria__c</fullName>
    <description>the highest criteria value so far added. Get it from the bottom row &amp; column of the index of whatever runner specifies as the criteria field.</description>
    <label>Last Run: Highest Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>