force-app/main/default/objects/IntegratedDatasetConfig__c/fields/LastRunLowestCriteria__c.field-meta.xml
<CustomField>
    <fullName>LastRunLowestCriteria__c</fullName>
    <label>Last Run: Lowest Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>