force-app/main/default/objects/IntegratedDatasetConfig__c/fields/LastRunTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunTime__c</fullName>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>