force-app/main/default/objects/IntegratedDatasetConfig__c/fields/MetadataJson__c.field-meta.xml
<CustomField>
    <fullName>MetadataJson__c</fullName>
    <label>MetadataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>