force-app/main/default/objects/IntegratedDatasetConfig__c/fields/MinuteInterval__c.field-meta.xml
<CustomField>
    <fullName>MinuteInterval__c</fullName>
    <inlineHelpText>not criteria related. this is only for the amount of minutes to add when scheduling the next run</inlineHelpText>
    <label>Minute Interval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>