force-app/main/default/objects/IntegratedDatasetConfig__c/fields/NextRunTime__c.field-meta.xml
<CustomField>
    <fullName>NextRunTime__c</fullName>
    <label>Next Run Time</label>
    <type>DateTime</type>
</CustomField>