force-app/main/default/objects/IntegratedDatasetConfig__c/fields/OrderedColumn__c.field-meta.xml
<CustomField>
    <fullName>OrderedColumn__c</fullName>
    <label>Ordered Column</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>