force-app/main/default/objects/IntegratedDatasetConfig__c/fields/OrderedColumnDirection__c.field-meta.xml
<CustomField>
    <fullName>OrderedColumnDirection__c</fullName>
    <label>Ordered Column Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>