force-app/main/default/objects/IntegratedDatasetConfig__c/fields/Weekdays_Running__c.field-meta.xml
<CustomField>
    <fullName>Weekdays_Running__c</fullName>
    <label>Weekdays Running</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
    </valueSet>
</CustomField>