force-app/main/default/objects/IntegratedDatasetConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DatasetName__c</columns>
    <columns>OrderedColumn__c</columns>
    <columns>OrderedColumnDirection__c</columns>
    <columns>MinuteInterval__c</columns>
    <columns>InsightsExternalDataId__c</columns>
    <columns>LastRunTime__c</columns>
    <columns>NextRunTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>